# B2D4pi-EvtGen-Model

./: .clang-format  AUTHORS  CMakeLists.txt  DECAY_NONPYTHIA.DEC  History.md  History.txt  README.md  applyClangFormat.sh  configure  evt.pdl  setupEvtGen.sh
EvtGen/: EvtGen.hh
EvtGenBase/: Evt3Rank3C.hh  EvtAbsBinning.hh  EvtAbsLineShape.hh  EvtAbsRadCorr.hh  EvtAmp.hh  EvtAmpAmpPdf.hh  EvtAmpFactory.hh  EvtAmpIndex.hh  EvtAmpPdf.hh  EvtAmpSubIndex.hh  EvtAmplitude.hh  EvtAmplitudeSum.hh  EvtBlattWeisskopf.hh  EvtBreitWignerPdf.hh  EvtCGCoefSingle.hh  EvtCPUtil.hh  EvtComplex.hh  EvtConst.hh  EvtCyclic3.hh  EvtDalitzCoord.hh  EvtDalitzFlatPdf.hh  EvtDalitzPlot.hh  EvtDalitzPoint.hh  EvtDalitzResPdf.hh  EvtDalitzReso.hh  EvtDecayAmp.hh  EvtDecayBase.hh  EvtDecayIncoherent.hh  EvtDecayMode.hh  EvtDecayParm.hh  EvtDecayProb.hh  EvtDecayTable.hh  EvtDiLog.hh  EvtDiracParticle.hh  EvtDiracSpinor.hh  EvtEvalHelAmp.hh  EvtExtGeneratorCommandsTable.hh  EvtFlatAmp.hh  EvtFlatLineShape.hh  EvtFlatte.hh  (+94 more)
EvtGenExternal/: EvtExternalGenFactory.hh  EvtExternalGenList.hh  EvtPHOTOS.hh  EvtPhotosEngine.hh  EvtPythia.hh  EvtPythia6CommandConverter.hh  EvtPythiaEngine.hh  EvtPythiaRandom.hh  EvtTauola.hh  EvtTauolaEngine.hh
EvtGenModels/: EvtAbsExternalGen.hh  EvtBBScalar.hh  EvtBCSFF.hh  EvtBCTFF.hh  EvtBCVFF.hh  EvtBCVFF2.hh  EvtBHadronic.hh  EvtBLLNuL.hh  EvtBLLNuLAmp.hh  EvtBTo3hCP.hh  EvtBTo3piCP.hh  EvtBTo4piCP.hh  EvtBToD4pi.hh  EvtBToDDalitzCPK.hh  EvtBToDiBaryonlnupQCD.hh  EvtBToDiBaryonlnupQCDFF.hh  EvtBToKpipiCP.hh  EvtBToPlnuBK.hh  EvtBToPlnuBKFF.hh  EvtBToVlnuBall.hh  EvtBToVlnuBallFF.hh  EvtBaryonPCR.hh  EvtBaryonPCRFF.hh  EvtBcBsNPi.hh  EvtBcBsStarNPi.hh  EvtBcPsiNPi.hh  EvtBcSMuNu.hh  EvtBcTMuNu.hh  EvtBcToNPi.hh  EvtBcVHad.hh  EvtBcVMuNu.hh  EvtBcVNpi.hh  EvtBsMuMuKK.hh  EvtBsquark.hh  EvtBto2piCPiso.hh  EvtBtoKD3P.hh  EvtBtoKpiCPiso.hh  EvtBtoXsEtap.hh  EvtBtoXsgamma.hh  EvtBtoXsgammaAbsModel.hh  (+174 more)
cmake/Modules/: CompilerFlags.cmake  ExternalDependencies.cmake  FindPhotos++.cmake  FindTauola++.cmake
cmake/Templates/: EvtGenConfig.cmake.in
doc/: CMakeLists.txt
src/: CMakeLists.txt  EvtGen.cpp
src/EvtGenBase/: Evt3Rank3C.cpp  EvtAbsLineShape.cpp  EvtAmp.cpp  EvtAmpIndex.cpp  EvtAmpSubIndex.cpp  EvtBlattWeisskopf.cpp  EvtBreitWignerPdf.cpp  EvtCGCoefSingle.cpp  EvtCPUtil.cpp  EvtComplex.cpp  EvtConst.cpp  EvtCyclic3.cpp  EvtDalitzCoord.cpp  EvtDalitzFlatPdf.cpp  EvtDalitzPlot.cpp  EvtDalitzPoint.cpp  EvtDalitzResPdf.cpp  EvtDalitzReso.cpp  EvtDecayAmp.cpp  EvtDecayBase.cpp  EvtDecayIncoherent.cpp  EvtDecayMode.cpp  EvtDecayParm.cpp  EvtDecayProb.cpp  EvtDecayTable.cpp  EvtDiLog.cpp  EvtDiracParticle.cpp  EvtDiracSpinor.cpp  EvtEvalHelAmp.cpp  EvtExtGeneratorCommandsTable.cpp  EvtFlatLineShape.cpp  EvtFlatte.cpp  EvtGammaMatrix.cpp  EvtGenKine.cpp  EvtHepMCEvent.cpp  EvtHighSpinParticle.cpp  EvtId.cpp  EvtIdSet.cpp  EvtIncoherentMixing.cpp  EvtIntegPdf1D.cpp  (+71 more)
src/EvtGenExternal/: EvtExternalGenFactory.cpp  EvtExternalGenList.cpp  EvtPHOTOS.cpp  EvtPhotosEngine.cpp  EvtPythia.cpp  EvtPythia6CommandConverter.cpp  EvtPythiaEngine.cpp  EvtTauola.cpp  EvtTauolaEngine.cpp
src/EvtGenModels/: EvtBBScalar.cpp  EvtBCSFF.cpp  EvtBCTFF.cpp  EvtBCVFF.cpp  EvtBCVFF2.cpp  EvtBHadronic.cpp  EvtBLLNuL.cpp  EvtBLLNuLAmp.cpp  EvtBTo3hCP.cpp  EvtBTo3piCP.cpp  EvtBTo4piCP.cpp  EvtBToD4pi.cpp  EvtBToDDalitzCPK.cpp  EvtBToDiBaryonlnupQCD.cpp  EvtBToDiBaryonlnupQCDFF.cpp  EvtBToKpipiCP.cpp  EvtBToPlnuBK.cpp  EvtBToPlnuBKFF.cpp  EvtBToVlnuBall.cpp  EvtBToVlnuBallFF.cpp  EvtBaryonPCR.cpp  EvtBaryonPCRFF.cpp  EvtBcBsNPi.cpp  EvtBcBsStarNPi.cpp  EvtBcPsiNPi.cpp  EvtBcSMuNu.cpp  EvtBcTMuNu.cpp  EvtBcToNPi.cpp  EvtBcVHad.cpp  EvtBcVMuNu.cpp  EvtBcVNpi.cpp  EvtBsMuMuKK.cpp  EvtBsquark.cpp  EvtBto2piCPiso.cpp  EvtBtoKD3P.cpp  EvtBtoKpiCPiso.cpp  EvtBtoXsEtap.cpp  EvtBtoXsgamma.cpp  EvtBtoXsgammaAbsModel.cpp  EvtBtoXsgammaAliGreub.cpp  (+167 more)
test/: B2D4pi.root  CMakeLists.txt  compareRootFiles.py  compareTests.sh  do_B2D4pi  do_tests  evt_dalitz.cc  evtgenlhc_test1.cc  example1.cc  exampleWriteHepMC.cc  myevtgen_test.cc
test/exampleFiles/: B2D4pi.DEC  doRefCheck.cc
validation/: CMakeLists.txt  PhaseSpacePlots.C  PlotKspimumu.C  compareDalitz.C  compareRootFiles.cc  compareRootFiles.hh  genExampleRootFiles.cc  genRootDecayChain.cc  genRootDecayChain.hh  photosPlots.C  plotBKstarGamma.C  testCPVDecays.cc
